<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="start_smart_touch"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_start_short"
        android:shortcutLongLabel="@string/shortcut_start_long">
        <intent
            android:action="com.smarttouch.ai.action.START"
            android:targetPackage="com.smarttouch.ai"
            android:targetClass="com.smarttouch.ai.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="stop_smart_touch"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_stop_short"
        android:shortcutLongLabel="@string/shortcut_stop_long">
        <intent
            android:action="com.smarttouch.ai.action.STOP"
            android:targetPackage="com.smarttouch.ai"
            android:targetClass="com.smarttouch.ai.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="pause_smart_touch"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_pause_short"
        android:shortcutLongLabel="@string/shortcut_pause_long">
        <intent
            android:action="com.smarttouch.ai.action.PAUSE"
            android:targetPackage="com.smarttouch.ai"
            android:targetClass="com.smarttouch.ai.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="resume_smart_touch"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_resume_short"
        android:shortcutLongLabel="@string/shortcut_resume_long">
        <intent
            android:action="com.smarttouch.ai.action.RESUME"
            android:targetPackage="com.smarttouch.ai"
            android:targetClass="com.smarttouch.ai.MainActivity" />
    </shortcut>

</shortcuts>
